5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4429/executions/1679_1107.log
== SUBMITION (2019-05-01 12:39:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print('numero de mes invalido')
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
else:
	print('dezembro')
-- EXECUTION TIME:
0.150043
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
setembro
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
junho
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 12:54:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print('numero de mes invalido')
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
else:
	print('dezembro')
-- EXECUTION TIME:
0.214502
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
setembro
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
junho
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:54:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print('numero de mes invalido')
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
else:
	print('dezembro')
-- OUTPUT:
setembro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:54:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print('numero de mes invalido')
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
else:
	print('dezembro')
-- OUTPUT:
setembro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:54:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print('numero de mes invalido')
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
else:
	print('dezembro')
-- OUTPUT:
setembro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 12:55:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print('numero de mes invalido')
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
else:
	print('dezembro')
-- EXECUTION TIME:
0.183702
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
setembro
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
junho
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:19:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print('numero de mes invalido')
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
elif (mes==12):
	print('dezembro')
else:
	print("A entrada",mes, "eh invalida")
	

-- OUTPUT:
setembro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:19:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print('numero de mes invalido')
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
elif (mes==12):
	print('dezembro')
else:
	print("A entrada",mes, "eh invalida")
	

-- OUTPUT:
setembro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:20:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
elif (mes==12):
	print('dezembro')
else:
	print("A entrada",mes, "eh invalida")
	

-- ERROR:
File "XXXX", line 7
    elif (mes==1):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:21:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	
	elif (mes==1):
		print('janeiro')
	elif (mes==2):
		print('fevereiro')
	elif (mes==3):
		print('marco')
	elif (mes==4):
		print('abril')
	elif (mes==5):
		print('maio')
	elif (mes==6):
		print('junho')
	elif (mes==7):
		print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
elif (mes==12):
	print('dezembro')
else:
	print("A entrada",mes, "eh invalida")
	

-- ERROR:
File "XXXX", line 7
    elif (mes==1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:21:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	
	elif (mes==1):
		print('janeiro')
	elif (mes==2):
		print('fevereiro')
	elif (mes==3):
		print('marco')
	elif (mes==4):
		print('abril')
	elif (mes==5):
		print('maio')
	elif (mes==6):
		print('junho')
	elif (mes==7):
		print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
elif (mes==12):
	print('dezembro')
else:
	print("A entrada",mes, "eh invalida")
	

-- ERROR:
File "XXXX", line 7
    elif (mes==1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:21:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	elif (mes==1):
		print('janeiro')
	elif (mes==2):
		print('fevereiro')
	elif (mes==3):
		print('marco')
	elif (mes==4):
		print('abril')
	elif (mes==5):
		print('maio')
	elif (mes==6):
		print('junho')
	elif (mes==7):
		print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
elif (mes==12):
	print('dezembro')
else:
	print("A entrada",mes, "eh invalida")
	

-- ERROR:
File "XXXX", line 6
    elif (mes==1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:21:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
		print('abril')
elif (mes==5):
		print('maio')
elif (mes==6):
		print('junho')
elif (mes==7):
		print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
elif (mes==12):
	print('dezembro')
else:
	print("A entrada",mes, "eh invalida")
	

-- ERROR:
File "XXXX", line 6
    elif (mes==1):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:22:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
		print('abril')
elif (mes==5):
		print('maio')
elif (mes==6):
		print('junho')
elif (mes==7):
		print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
elif (mes==12):
	print('dezembro')

	

-- ERROR:
File "XXXX", line 6
    elif (mes==1):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:22:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print("A entrada",mes, "eh invalida")
	elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
		print('abril')
elif (mes==5):
		print('maio')
elif (mes==6):
		print('junho')
elif (mes==7):
		print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
elif (mes==12):
	print('dezembro')

	

-- ERROR:
File "XXXX", line 7
    elif (mes==1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:22:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print("A entrada",mes, "eh invalida")
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
		print('abril')
elif (mes==5):
		print('maio')
elif (mes==6):
		print('junho')
elif (mes==7):
		print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
elif (mes==12):
	print('dezembro')

	

-- OUTPUT:
setembro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:22:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print("A entrada",mes, "eh invalida")
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
		print('abril')
elif (mes==5):
		print('maio')
elif (mes==6):
		print('junho')
elif (mes==7):
		print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
elif (mes==12):
	print('dezembro')

	

-- OUTPUT:
setembro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:23:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print("A entrada",mes, "eh invalida")
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
		print('abril')
elif (mes==5):
		print('maio')
elif (mes==6):
		print('junho')
elif (mes==7):
		print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
elif (mes==12):
	print('dezembro')

	

-- EXECUTION TIME:
0.204094
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
setembro
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
junho
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:23:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print("A entrada",mes, "eh invalida")
elif (mes=1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
		print('abril')
elif (mes==5):
		print('maio')
elif (mes==6):
		print('junho')
elif (mes==7):
		print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
elif (mes==12):
	print('dezembro')

	

-- ERROR:
File "XXXX", line 7
    elif (mes=1):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:23:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print("A entrada",mes, "eh invalida")
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
		print('abril')
elif (mes==5):
		print('maio')
elif (mes==6):
		print('junho')
elif (mes==7):
		print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
else (mes==12):
	print('dezembro')

	

-- EXECUTION TIME:
0.139088
-- ERROR:
  File "/home/codebench/codes/1679/1107/main.py", line 29
    else (mes==12):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 23:04:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print("A entrada",mes, "eh invalida")
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
		print('abril')
elif (mes==5):
		print('maio')
elif (mes==6):
		print('junho')
elif (mes==7):
		print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
else (mes==12):
	print('dezembro')

	

-- ERROR:
File "XXXX", line 29
    else (mes==12):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 23:04:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print("A entrada",mes, "eh invalida")
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
		print('abril')
elif (mes==5):
		print('maio')
elif (mes==6):
		print('junho')
elif (mes==7):
		print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
elif (mes==12):
	print('dezembro')

	

-- OUTPUT:
setembro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 23:04:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print("A entrada",mes, "eh invalida")
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
		print('abril')
elif (mes==5):
		print('maio')
elif (mes==6):
		print('junho')
elif (mes==7):
		print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
elif (mes==12):
	print('dezembro')

	

-- OUTPUT:
setembro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 23:04:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print("A entrada",mes, "eh invalida")
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
		print('abril')
elif (mes==5):
		print('maio')
elif (mes==6):
		print('junho')
elif (mes==7):
		print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
elif (mes==12):
	print('dezembro')

	

-- EXECUTION TIME:
0.22368
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
setembro
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
junho
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 23:05:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print("A entrada",mes, "eh invalida")
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
		print('abril')
elif (mes==5):
		print('maio')
elif (mes==6):
		print('junho')
elif (mes==7):
		print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
elif (mes==12):
	print('dezembro')

	

-- OUTPUT:
setembro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 23:05:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print("A entrada",mes, "eh invalida")
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
elif (mes==12):
	print('dezembro')

	

-- OUTPUT:
setembro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 23:05:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print("A entrada",mes, "eh invalida")
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
elif (mes==12):
	print('dezembro')

	

-- EXECUTION TIME:
0.197807
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
setembro
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
junho
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 05:53:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print("A entrada",mes, "eh invalida")
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
elif (mes==12):
	print('dezembro')

	

-- OUTPUT:
setembro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 05:54:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print("A entrada",mes, "eh invalida")
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
elif (mes==12):
	print('dezembro')

	

-- EXECUTION TIME:
0.200003
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
setembro
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
junho
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 05:54:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print("A entrada",mes, "eh invalida")
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
else:
	(mes==12):
	print('dezembro')

	

-- ERROR:
File "XXXX", line 30
    (mes==12):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 05:54:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print("A entrada",mes, "eh invalida")
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
else:
(mes==12):
	print('dezembro')

	

-- ERROR:
File "XXXX", line 30
    (mes==12):
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 05:54:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print("A entrada",mes, "eh invalida")
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
else:
	(mes==12):
print('dezembro')

	

-- ERROR:
File "XXXX", line 30
    (mes==12):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 05:54:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print("A entrada",mes, "eh invalida")
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
	else:
(mes==12):
print('dezembro')

	

-- ERROR:
File "XXXX", line 29
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 05:54:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print("A entrada",mes, "eh invalida")
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
	else:
	(mes==12):
print('dezembro')

	

-- ERROR:
File "XXXX", line 29
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 05:54:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print("A entrada",mes, "eh invalida")
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
	else:
(mes==12):
	print('dezembro')

	

-- ERROR:
File "XXXX", line 29
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 05:55:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print("A entrada",mes, "eh invalida")
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
else:
	(mes==12):
print('dezembro')

	

-- ERROR:
File "XXXX", line 30
    (mes==12):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 05:55:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print("A entrada",mes, "eh invalida")
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
else:
	(mes==12):
print('dezembro')

	

-- ERROR:
File "XXXX", line 30
    (mes==12):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 05:55:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print("A entrada",mes, "eh invalida")
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
else:
		(mes==12):
print('dezembro')

	

-- ERROR:
File "XXXX", line 30
    (mes==12):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 05:55:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print("A entrada",mes, "eh invalida")
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
	else:
	(mes==12):
print('dezembro')

	

-- ERROR:
File "XXXX", line 29
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 05:55:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print("A entrada",mes, "eh invalida")
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
	else:
(mes==12):
print('dezembro')

	

-- ERROR:
File "XXXX", line 29
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 05:55:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print("A entrada",mes, "eh invalida")
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
else:
(mes==12):
	print('dezembro')

	

-- ERROR:
File "XXXX", line 30
    (mes==12):
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 05:56:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print("A entrada",mes, "eh invalida")
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
elif:
	(mes==12):
	print('dezembro')

	

-- ERROR:
File "XXXX", line 29
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 05:56:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) or (mes < 1):
	print("A entrada",mes, "eh invalida")
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
elif(mes==12):
	print('dezembro')

	

-- OUTPUT:
setembro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 05:56:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) and (mes < 1):
	print("A entrada",mes, "eh invalida")
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
elif(mes==12):
	print('dezembro')

	

-- OUTPUT:
setembro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 05:56:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
mes=int(input('Digite o numero do mes'))
if (mes > 12) and (mes < 1):
	print("A entrada",mes, "eh invalida")
elif (mes==1):
	print('janeiro')
elif (mes==2):
	print('fevereiro')
elif (mes==3):
	print('marco')
elif (mes==4):
	print('abril')
elif (mes==5):
	print('maio')
elif (mes==6):
	print('junho')
elif (mes==7):
	print('julho')
elif (mes==8):
	print('agosto')
elif (mes==9):
	print('setembro')
elif (mes==10):
	print('outubro')
elif (mes==11):
	print('novembro')	
elif(mes==12):
	print('dezembro')

	

-- EXECUTION TIME:
0.268952
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
setembro
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
junho
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 14:42:05) 
-- CODE:
hoje= int(input('que dia e hoje:  '))
futuro=int(input('que dia do futuro: '))
resto= futuro % 7

#hoje igual a zero relaciona-se ao dia da semana - neste caso, domingo.
#resto relaciona-se ao dia do futuro n % 7
if((hoje < 0) or (hoje > 6)):
	print("A entrada", hoje, "eh invalida")
elif(hoje==0):
	if(resto == 0):
		print('Hoje eh domingo e o dia futuro eh domingo')
	elif(resto == 1):
		print('Hoje eh domingo e o dia futuro eh segunda')
	elif(resto == 2):
		print('Hoje eh domingo e o dia futuro eh terca')
	elif(resto == 3):
		print('Hoje eh domingo e o dia futuro eh quarta')
	elif(resto == 4):
		print('Hoje eh domingo e o dia futuro eh quinta')
	elif(resto == 5):
		print('Hoje eh domingo e o dia futuro eh sexta')
	elif(resto == 6):
		print('Hoje eh domingo e o dia futuro eh sabado')
elif(hoje == 1):
	if(resto == 0):
		print('Hoje eh segunda e o dia futuro eh segunda')
	elif(resto == 1):
		print('Hoje eh segunda e o dia futuro eh terca')
	elif(resto == 2):
		print('Hoje eh segunda e o dia futuro eh quarta ')
	elif(resto == 3):
		print('Hoje eh segunda e o dia futuro eh quinta')
	elif(resto == 4):
		print('Hoje eh segunda e o dia futuro eh sexta')
	elif(resto == 5):
		print('Hoje eh segunda e o dia futuro eh sabado')
	elif(resto == 6):
		print('Hoje eh segunda e o dia futuro eh domingo')
elif(hoje==2):
	if(resto == 0):
		print('Hoje eh terca e o dia futuro eh terca')
	elif(resto == 1):
		print('Hoje eh terca e o dia futuro eh quarta')
	elif(resto == 2):
		print('Hoje eh terca e o dia futuro eh quinta ')
	elif(resto == 3):
		print('Hoje eh terca e o dia futuro eh sexta')
	elif(resto == 4):
		print('Hoje eh terca e o dia futuro eh sabado')
	elif(resto == 5):
		print('Hoje eh terca e o dia futuro eh domingo')
	elif(resto == 6):
		print('Hoje eh terca e o dia futuro eh segunda')
	
elif(hoje==3):
	if(resto == 0):
		print('Hoje eh quarta e o dia futuro eh quarta')
	elif(resto == 1):
		print('Hoje eh quarta e o dia futuro eh quinta')
	elif(resto == 2):
		print('Hoje eh quarta e o dia futuro eh sexta ')
	elif(resto == 3):
		print('Hoje eh quarta e o dia futuro eh sabado')
	elif(resto == 4):
		print('Hoje eh quarta e o dia futuro eh domingo')
	elif(resto == 5):
		print('Hoje eh quarta e o dia futuro eh segunda')
	elif(resto == 6):
		print('Hoje eh quarta e o dia futuro eh terca')
	
#######
elif(hoje == 4):
	if(resto == 0):
		print('Hoje eh quinta e o dia futuro eh quinta')
	elif(resto == 1):
		print('Hoje eh quinta e o dia futuro eh sexta')
	elif(resto == 2):
		print('Hoje eh quinta e o dia futuro eh sabado ')
	elif(resto == 3):
		print('Hoje eh quinta e o dia futuro eh domingo')
	elif(resto == 4):
		print('Hoje eh quinta e o dia futuro eh segunda')
	elif(resto == 5):
		print('Hoje eh quinta e o dia futuro eh terca')
	elif(resto == 6):
		print('Hoje eh quinta e o dia futuro eh quarta')
	
#######
elif(hoje==5):
	if(resto == 0):
		print('Hoje eh sexta e o dia futuro eh sexta')
	elif(resto == 1):
		print('Hoje eh sexta e o dia futuro eh sabado')
	elif(resto == 2):
		print('Hoje eh sexta e o dia futuro eh domingo')
	elif(resto == 3):
		print('Hoje eh sexta e o dia futuro eh segunda')
	elif(resto == 4):
		print('Hoje eh sexta e o dia futuro eh terca')
	elif(resto == 5):
		print('Hoje eh sexta e o dia futuro eh quarta')
	elif(resto == 6):
		print('Hoje eh sexta e o dia futuro eh quinta')
	

elif(hoje==6):
	if(resto == 0):
		print('Hoje eh sabado e o dia futuro eh sabado')
	elif(resto == 1):
		print('Hoje eh sabado e o dia futuro eh domingo')
	elif(resto == 2):
		print('Hoje eh sabado e o dia futuro eh segunda ')
	elif(resto == 3):
		print('Hoje eh sabado e o dia futuro eh terca')
	elif(resto == 4):
		print('Hoje eh sabado e o dia futuro eh quarta')
	elif(resto == 5):
		print('Hoje eh sabado e o dia futuro eh quinta')
	elif(resto == 6):
		print('Hoje eh sabado e o dia futuro eh sexta')
		

-- EXECUTION TIME:
0.222859
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 14:42:29) 
-- CODE:
hoje= int(input('que dia e hoje:  '))
futuro=int(input('que dia do futuro: '))
resto= futuro % 7

#hoje igual a zero relaciona-se ao dia da semana - neste caso, domingo.
#resto relaciona-se ao dia do futuro n % 7
if((hoje < 0) or (hoje > 6)):
	print("A entrada", hoje, "eh invalida")
elif(hoje==0):
	if(resto == 0):
		print('Hoje eh domingo e o dia futuro eh domingo')
	elif(resto == 1):
		print('Hoje eh domingo e o dia futuro eh segunda')
	elif(resto == 2):
		print('Hoje eh domingo e o dia futuro eh terca')
	elif(resto == 3):
		print('Hoje eh domingo e o dia futuro eh quarta')
	elif(resto == 4):
		print('Hoje eh domingo e o dia futuro eh quinta')
	elif(resto == 5):
		print('Hoje eh domingo e o dia futuro eh sexta')
	elif(resto == 6):
		print('Hoje eh domingo e o dia futuro eh sabado')
elif(hoje == 1):
	if(resto == 0):
		print('Hoje eh segunda e o dia futuro eh segunda')
	elif(resto == 1):
		print('Hoje eh segunda e o dia futuro eh terca')
	elif(resto == 2):
		print('Hoje eh segunda e o dia futuro eh quarta ')
	elif(resto == 3):
		print('Hoje eh segunda e o dia futuro eh quinta')
	elif(resto == 4):
		print('Hoje eh segunda e o dia futuro eh sexta')
	elif(resto == 5):
		print('Hoje eh segunda e o dia futuro eh sabado')
	elif(resto == 6):
		print('Hoje eh segunda e o dia futuro eh domingo')
elif(hoje==2):
	if(resto == 0):
		print('Hoje eh terca e o dia futuro eh terca')
	elif(resto == 1):
		print('Hoje eh terca e o dia futuro eh quarta')
	elif(resto == 2):
		print('Hoje eh terca e o dia futuro eh quinta ')
	elif(resto == 3):
		print('Hoje eh terca e o dia futuro eh sexta')
	elif(resto == 4):
		print('Hoje eh terca e o dia futuro eh sabado')
	elif(resto == 5):
		print('Hoje eh terca e o dia futuro eh domingo')
	elif(resto == 6):
		print('Hoje eh terca e o dia futuro eh segunda')
	
elif(hoje==3):
	if(resto == 0):
		print('Hoje eh quarta e o dia futuro eh quarta')
	elif(resto == 1):
		print('Hoje eh quarta e o dia futuro eh quinta')
	elif(resto == 2):
		print('Hoje eh quarta e o dia futuro eh sexta ')
	elif(resto == 3):
		print('Hoje eh quarta e o dia futuro eh sabado')
	elif(resto == 4):
		print('Hoje eh quarta e o dia futuro eh domingo')
	elif(resto == 5):
		print('Hoje eh quarta e o dia futuro eh segunda')
	elif(resto == 6):
		print('Hoje eh quarta e o dia futuro eh terca')
	
#######
elif(hoje == 4):
	if(resto == 0):
		print('Hoje eh quinta e o dia futuro eh quinta')
	elif(resto == 1):
		print('Hoje eh quinta e o dia futuro eh sexta')
	elif(resto == 2):
		print('Hoje eh quinta e o dia futuro eh sabado ')
	elif(resto == 3):
		print('Hoje eh quinta e o dia futuro eh domingo')
	elif(resto == 4):
		print('Hoje eh quinta e o dia futuro eh segunda')
	elif(resto == 5):
		print('Hoje eh quinta e o dia futuro eh terca')
	elif(resto == 6):
		print('Hoje eh quinta e o dia futuro eh quarta')
	
#######
elif(hoje==5):
	if(resto == 0):
		print('Hoje eh sexta e o dia futuro eh sexta')
	elif(resto == 1):
		print('Hoje eh sexta e o dia futuro eh sabado')
	elif(resto == 2):
		print('Hoje eh sexta e o dia futuro eh domingo')
	elif(resto == 3):
		print('Hoje eh sexta e o dia futuro eh segunda')
	elif(resto == 4):
		print('Hoje eh sexta e o dia futuro eh terca')
	elif(resto == 5):
		print('Hoje eh sexta e o dia futuro eh quarta')
	elif(resto == 6):
		print('Hoje eh sexta e o dia futuro eh quinta')
	

elif(hoje==6):
	if(resto == 0):
		print('Hoje eh sabado e o dia futuro eh sabado')
	elif(resto == 1):
		print('Hoje eh sabado e o dia futuro eh domingo')
	elif(resto == 2):
		print('Hoje eh sabado e o dia futuro eh segunda ')
	elif(resto == 3):
		print('Hoje eh sabado e o dia futuro eh terca')
	elif(resto == 4):
		print('Hoje eh sabado e o dia futuro eh quarta')
	elif(resto == 5):
		print('Hoje eh sabado e o dia futuro eh quinta')
	elif(resto == 6):
		print('Hoje eh sabado e o dia futuro eh sexta')
		

-- EXECUTION TIME:
0.1567
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
